--- a/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/Terminal.ConfirmDetails.cshtml
@@ -50,7 +50,7 @@
             <partial name="CartWarnings" model="cart.Warnings" />
         </div>
         <div id="cart-items" class="cart">
-            <div role="list" class="cart-body" aria-label="@T("ShoppingCart")">
+            <div role="list" class="cart-body" aria-label="@T("ShoppingCart")" aria-describedby="footer-legal-info">
                 <partial name="CartItems" model="cart" />
             </div>
         </div>
