--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -35,7 +35,7 @@
                 @* Cart Items *@
                 <div class="col-lg-7 col-xl-8">
                     <div id="cart-items" class="cart" attr-class='(Model.IsEditable, "cart-editable")'>
-                        <div role="list" class="cart-body" aria-label="@T("ShoppingCart")">
+                        <div role="list" class="cart-body" aria-label="@T("ShoppingCart")" aria-describedby="footer-legal-info">
                             <partial name="CartItems" model="Model" />
                         </div>
                     </div>
