--- a/src/Smartstore.Modules/Smartstore.Stripe/Views/Shared/Components/StripeElements/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.Stripe/Views/Shared/Components/StripeElements/Default.cshtml
@@ -6,7 +6,7 @@
 {
     <div class="opt-form">
         <div class="media">
-            <img class="media-object img-fluid mr-3" src="@Url.Content("~/Modules/Smartstore.Stripe/branding.png")" />
+            <img class="media-object img-fluid mr-3" src="@Url.Content("~/Modules/Smartstore.Stripe/branding.png")" alt="" />
             <div class="media-body">
                 @Html.Raw(T("Plugins.Smartstore.Stripe.PaymentInfo"))
             </div>
