--- a/src/Smartstore.Web/Views/Checkout/Partials/PaymentMethodList.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/PaymentMethodList.cshtml
@@ -12,16 +12,18 @@
         <legend class="sr-only">
             @T("Checkout.SelectPaymentMethod")
         </legend>
-        <ul class="list-group opt-list payment-methods" attr-class='(Model.DisplayPaymentMethodIcons, "opt-list-icons")' role="list">
+        <ul class="list-group opt-list payment-methods" attr-class='(Model.DisplayPaymentMethodIcons, "opt-list-icons")'>
             @for (int i = 0; i < Model.PaymentMethods.Count; i++)
             {
-                var paymentMethod = Model.PaymentMethods[i];
-                var widgetInvoker = paymentMethod.InfoWidget;
+                var payWith = Model.PaymentMethods[i];
+                var hasFee = payWith.Fee != decimal.Zero;
+                var widgetInvoker = payWith.InfoWidget;
                 var infoRendered = false;
 
-                var defaultPluginDescKey = "Plugins.PaymentInfo." + paymentMethod.PaymentMethodSystemName;
+                var defaultPluginDescKey = "Plugins.PaymentInfo." + payWith.PaymentMethodSystemName;
                 var defaultPluginDesc = LocalizationService.GetResource(defaultPluginDescKey, logIfNotFound: false, returnEmptyIfNotFound: true);
-                var description = paymentMethod.FullDescription?.Value ?? defaultPluginDesc;
+                var description = payWith.FullDescription?.Value ?? defaultPluginDesc;
+                var describedBy = (payWith.Fee != 0 ? $"payment-fee-{i}" : null).Grow(description.HasValue() ? $"payment-desc-{i}" : null);
 
                 async Task RenderPaymentMethod()
                 {
@@ -30,36 +32,33 @@
                             <input id="paymentmethod_@(i)" 
                                    type="radio" 
                                    name="paymentmethod"
-                                   attr-checked='(paymentMethod.Selected, "checked")'
+                                   attr-checked='(payWith.Selected, "checked")'
                                    data-has-info='@(widgetInvoker != null ? "true" : "false")'
-                                   data-lazy-info='@(paymentMethod.RequiresInteraction ? "true" : "false")'
+                                   data-lazy-info='@(payWith.RequiresInteraction ? "true" : "false")'
                                    class="opt-radio form-check-input payment-selection"
-                                   value="@(paymentMethod.PaymentMethodSystemName)" 
+                                   value="@(payWith.PaymentMethodSystemName)" 
                                    aria-hidden="true"
                                    tabindex="-1" />
                             <label class="form-check-label" for="paymentmethod_@(i)">
-                                <span class="opt-name">@paymentMethod.Name</span>
+                                <span class="opt-name">@payWith.Name</span>
                             </label>
                         </div>
-
-                        <small sm-if="paymentMethod.Fee != decimal.Zero" 
-                               id="payment-fee@(i)"
+                        <small sm-if="hasFee" 
+                               id="payment-fee-@i"
                                class="badge badge-danger ml-2 opt-fee payment-fee"
                                aria-describedby="footer-legal-info">
-                            @paymentMethod.Fee
+                            <data asp-for="@payWith.Fee">@payWith.Fee</data>
                         </small>
                     </div>
-
                     @if (description.HasValue())
                     {
                         <div class="opt-info-item payment-method-description text-muted" 
                              id="payment-desc-@i"
-                             sm-language-attributes-for="paymentMethod.FullDescription">
+                             sm-language-attributes-for="payWith.FullDescription">
                             @Html.Raw(description)
                         </div>
                     }
-
-                    @if (!paymentMethod.RequiresInteraction)
+                    @if (!payWith.RequiresInteraction)
                     {
                         await RenderPaymentWidget(false);
                     }
@@ -68,42 +67,42 @@
                 async Task RenderPaymentWidget(bool isEmbedded)
                 {
                     infoRendered = true;
-                    <div class="opt-info payment-method-info"
+                    <div id="pw-@payWith.PaymentMethodSystemName" 
+                         class="opt-info payment-method-info"
                          attr-class='(isEmbedded, "opt-info-embedded")'
-                         attr-data-lazy-info='(paymentMethod.RequiresInteraction, "true")'
-                         data-system-name="@paymentMethod.PaymentMethodSystemName"
-                         id="pw-@paymentMethod.PaymentMethodSystemName">
+                         attr-data-lazy-info='(payWith.RequiresInteraction, "true")'
+                         data-system-name="@payWith.PaymentMethodSystemName">
 
-                        <div sm-if="paymentMethod.Selected && !ViewData.ModelState.IsValid" id="payment-info-validation-summary">
+                        <div sm-if="payWith.Selected && !ViewData.ModelState.IsValid" id="payment-info-validation-summary">
                             @Html.ValidationSummary(false)
                         </div>
 
-                        @if (!(description.HasValue() && !paymentMethod.RequiresInteraction) && paymentMethod.InfoWidget != null)
+                        @if (!(description.HasValue() && !payWith.RequiresInteraction) && payWith.InfoWidget != null)
                         {
-                            @await paymentMethod.InfoWidget.InvokeAsync(ViewContext);
+                            @await payWith.InfoWidget.InvokeAsync(ViewContext);
                         }
                     </div>
                 }
 
                 <li class="list-group-item opt-list-item payment-method-item focus-inset" 
-                    attr-class='(paymentMethod.Selected, "active")' 
-                    role="listitem" 
+                    attr-class='(payWith.Selected, "active")' 
                     tabindex="0"
-                    attr-aria-expanded='(widgetInvoker != null, paymentMethod.Selected ? "true" : "false")' 
-                    attr-aria-controls='(widgetInvoker != null, "pw-" + paymentMethod.PaymentMethodSystemName)'
-                    aria-describedby="@(paymentMethod.Fee !=  decimal.Zero ? ("payment-fee" + i + " ") : "")payment-desc-@i">
+                    attr-aria-expanded='(widgetInvoker != null, payWith.Selected.ToString().ToLower())' 
+                    attr-aria-controls='(widgetInvoker != null, "pw-" + payWith.PaymentMethodSystemName)'
+                    attr-data-target='(widgetInvoker != null, "#pw-" + payWith.PaymentMethodSystemName)'
+                    attr-aria-describedby='(describedBy.HasValue(), describedBy)'>
                     @if (Model.DisplayPaymentMethodIcons)
                     {
                         <div class="row no-gutters">
-                            <div sm-if="paymentMethod.BrandUrl.HasValue()" class="col-auto payment-brand">
-                                <img class="img-fluid" src="@Url.Content(paymentMethod.BrandUrl)" alt="@paymentMethod.Name" />
+                            <div sm-if="payWith.BrandUrl.HasValue()" class="col-auto payment-brand">
+                                <img class="img-fluid" src="@Url.Content(payWith.BrandUrl)" alt="" />
                             </div>
                             <div class="col">
                                 @{ await RenderPaymentMethod(); }
                             </div>
                         </div>
 
-                        if (paymentMethod.Selected && widgetInvoker != null && !infoRendered)
+                        if (payWith.Selected && widgetInvoker != null && !infoRendered)
                         {
                             await RenderPaymentWidget(true);
                         }
