--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -113,6 +113,7 @@
         <i class="fa fa-lg fa-angle-up"></i>
     </a>
     <span id="sr-desc-empty" class="sr-only"></span>
+    <span id="sr-status" class="sr-only" role="status" aria-live="polite"></span>
 </div>
 
 <partial name="Notifications" />
