--- a/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ConfirmDetails.cshtml
@@ -6,10 +6,9 @@
 @{
     var cart = Model.ShoppingCart;
     var shippingInfoUrl = await Url.TopicAsync("ShippingInfo", true);
-
-    var showConsentBox = Model.NewsletterSubscription != CheckoutNewsletterSubscription.None
-        || Model.ThirdPartyEmailHandOver != CheckoutThirdPartyEmailHandOver.None
-        || await Display.ZoneHasWidgetsAsync("checkout_submit_data_consent");
+    var subscribeToNewsletter = Model.NewsletterSubscription != CheckoutNewsletterSubscription.None;
+    var emailHandOver = Model.ThirdPartyEmailHandOver != CheckoutThirdPartyEmailHandOver.None;
+    var showConsentBox = subscribeToNewsletter || emailHandOver || await Display.ZoneHasWidgetsAsync("checkout_submit_data_consent");
 }
 
 <input type="hidden" id="customercommenthidden" name="customercommenthidden" />
@@ -19,29 +18,34 @@
 </p>
 
 <div sm-if="showConsentBox" id="terms-of-service-consent-box" class="card mb-3">
-    <div class="card-body">
-        <div sm-if="Model.NewsletterSubscription != CheckoutNewsletterSubscription.None" class="form-check">
-            <input attr-checked='(Model.NewsletterSubscription == CheckoutNewsletterSubscription.Activated, "checked")'
-                   type="checkbox" id="SubscribeToNewsletter" name="SubscribeToNewsletter" class="form-check-input" />
-            <label class="form-check-label" for="SubscribeToNewsletter">
-                <span>@T("Checkout.SubscribeToNewsletter")</span>
-            </label>
-        </div>
+    <fieldset>
+        <legend class="sr-only">
+            <span sm-if="subscribeToNewsletter">@T("Checkout.SubscribeToNewsletter")</span>
+            <span sm-if=emailHandOver> @Model.ThirdPartyEmailHandOverLabel</span>
+        </legend>
+        <div class="card-body">
+            <div sm-if="subscribeToNewsletter" class="form-check">
+                <input attr-checked='(Model.NewsletterSubscription == CheckoutNewsletterSubscription.Activated, "checked")'
+                       type="checkbox" id="SubscribeToNewsletter" name="SubscribeToNewsletter" class="form-check-input" />
+                <label class="form-check-label" for="SubscribeToNewsLetter">
+                    <span>@T("Checkout.SubscribeToNewsletter")</span>
+                </label>
+            </div>
+            <div sm-if="emailHandOver" class="form-check">
+                <input attr-checked='(Model.ThirdPartyEmailHandOver == CheckoutThirdPartyEmailHandOver.Activated, "checked")'
+                       type="checkbox" id="AcceptThirdPartyEmailHandOver" name="AcceptThirdPartyEmailHandOver" class="form-check-input" />
+                <label class="form-check-label" for="AcceptThirdPartyEmailHandOver">
+                    <span>@Model.ThirdPartyEmailHandOverLabel</span>
+                </label>
+            </div>
 
-        <div sm-if="Model.ThirdPartyEmailHandOver != CheckoutThirdPartyEmailHandOver.None" class="form-check">
-            <input attr-checked='(Model.ThirdPartyEmailHandOver == CheckoutThirdPartyEmailHandOver.Activated, "checked")'
-                   type="checkbox" id="AcceptThirdPartyEmailHandOver" name="AcceptThirdPartyEmailHandOver" class="form-check-input" />
-            <label class="form-check-label" for="AcceptThirdPartyEmailHandOver">
-                <span>@Model.ThirdPartyEmailHandOverLabel</span>
-            </label>
+            <zone name="checkout_submit_data_consent" />
         </div>
-
-        <zone name="checkout_submit_data_consent" />
-    </div>
+    </fieldset>
 </div>
 
 <div id="confirm-warnings" class="confirm-order">
-    <div sm-if="Model.Warnings.Count > 0" class="alert alert-danger mb-3">
+    <div sm-if="Model.Warnings.Count > 0" class="alert alert-danger mb-3" role="alert">
         <ul>
             @foreach (var warning in Model.Warnings)
             {
@@ -66,16 +70,16 @@
 
 @if (cart.Items.Any())
 {
-    <div>
+    <section aria-labelledby="confirm-products">
         <div class="row align-items-end mb-2">
             <div class="col">
-                <span class="h5">
+                <span id="confirm-products" class="h5">
                     @Html.Raw(T("ShoppingCart.Products"))
                 </span>
             </div>
             <div class="col col-auto">
                 <a href="@Url.RouteUrl("ShoppingCart")" class="btn btn-secondary btn-sm">
-                    <i class="fa fa-angle-left"></i>
+                    <i class="fa fa-angle-left" aria-hidden="true"></i>
                     <span>@T("ShoppingCart.EditCart")</span>
                 </a>
             </div>
@@ -84,15 +88,15 @@
             <partial name="CartWarnings" model="cart.Warnings" />
         </div>
         <div id="cart-items" class="cart">
-            <div role="list" class="cart-body" aria-label="@T("ShoppingCart")" aria-describedby="footer-legal-info">
+            <div role="list" class="cart-body" aria-labelledby="confirm-products" aria-describedby="footer-legal-info">
                 <partial name="CartItems" model="cart" />
             </div>
         </div>
-    </div>
+    </section>
 }
 else
 {
-    <div class="alert alert-warning fade show">
+    <div class="alert alert-warning fade show" role="alert">
         @T("ShoppingCart.CartIsEmpty")
     </div>
 }
@@ -103,9 +107,12 @@ else
     </div>
     <div class="row align-items-center">
         <div class="col col-auto cart-buttons">
-            <button type="button" class="btn btn-danger btn-lg @Model.NextStepClass" onclick="return false;">
+            <button type="button" 
+                    class="btn btn-danger btn-lg @Model.NextStepClass" 
+                    onclick="return false;"
+                    aria-describedby="sr-buy-hint">
                 <span>@T("Checkout.ConfirmButton")</span>
-                <i class="fa fa-angle-right"></i>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
             </button>
         </div>
         <div class="col col-auto">
