--- a/src/Smartstore.Web/Views/Checkout/Partials/OrderReviewData.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/OrderReviewData.cshtml
@@ -12,40 +12,41 @@
         }
 
         var cityStateZip = address.GetFormattedCityStateZip();
-
-        <div class="mb-2">
-            <div sm-if="address.CompanyEnabled && address.Company.HasValue()" class="company">
-                @address.Company
+        <address class="mb-0">
+            <div class="mb-2">
+                <div sm-if="address.CompanyEnabled && address.Company.HasValue()" class="company">
+                    @address.Company
+                </div>
+                <div class="name">
+                    <span class="bidi-embed first-name">@address.FirstName</span>
+                    <span class="bidi-embed last-name">@address.LastName</span>
+                </div>
+                <div sm-if="address.StreetAddressEnabled && address.Address1.HasValue()" class="address1">
+                    @address.Address1
+                </div>
+                <div sm-if="address.StreetAddress2Enabled && address.Address2.HasValue()" class="address2">
+                    @address.Address2
+                </div>
+                <div sm-if="cityStateZip.HasValue()" class="city-state-zip">
+                    @Html.Raw(cityStateZip)
+                </div>
+                <div sm-if="address.CountryEnabled && address.CountryName.HasValue()" class="country">
+                    @address.CountryName
+                </div>
             </div>
-            <div class="name">
-                <span class="bidi-embed first-name">@address.FirstName</span>
-                <span class="bidi-embed last-name">@address.LastName</span>
+            <div class="email">
+                <span class="pr-1">@T("Order.Email"):</span>
+                <span>@address.Email</span>
             </div>
-            <div sm-if="address.StreetAddressEnabled && address.Address1.HasValue()" class="address1">
-                @address.Address1
+            <div sm-if="address.PhoneEnabled && address.PhoneNumber.HasValue()" class="phone">
+                <span>@T("Order.Phone"):</span>
+                <span>@address.PhoneNumber</span>
             </div>
-            <div sm-if="address.StreetAddress2Enabled && address.Address2.HasValue()" class="address2">
-                @address.Address2
+            <div sm-if="address.FaxEnabled && address.FaxNumber.HasValue()" class="fax">
+                <span>@T("Order.Fax"):</span>
+                <span>@address.FaxNumber</span>
             </div>
-            <div sm-if="cityStateZip.HasValue()" class="city-state-zip">
-                @Html.Raw(cityStateZip)
-            </div>
-            <div sm-if="address.CountryEnabled && address.CountryName.HasValue()" class="country">
-                @address.CountryName
-            </div>
-        </div>
-        <div class="email">
-            <span class="pr-1">@T("Order.Email"):</span>
-            <span>@address.Email</span>
-        </div>
-        <div sm-if="address.PhoneEnabled && address.PhoneNumber.HasValue()" class="phone">
-            <span>@T("Order.Phone"):</span>
-            <span>@address.PhoneNumber</span>
-        </div>
-        <div sm-if="address.FaxEnabled && address.FaxNumber.HasValue()" class="fax">
-            <span>@T("Order.Fax"):</span>
-            <span>@address.FaxNumber</span>
-        </div>
+        </address>
     }
 }
 
@@ -60,7 +61,8 @@
                 </div>
                 <div class="col col-auto">
                     <a asp-action="BillingAddress" asp-controller="Checkout" class="btn btn-primary btn-sm change-checkout-data change-billing-address">
-                        @T("Common.Change")
+                        <span>@T("Common.Change")</span>
+                        <span class="sr-only">&nbsp;@T("Order.BillingAddress")</span>
                     </a>
                 </div>
             </div>
@@ -75,7 +77,8 @@
                 </div>
                 <div class="col col-auto">
                     <a asp-action="ShippingAddress" asp-controller="Checkout" class="btn btn-primary btn-sm change-checkout-data change-shipping-address">
-                        @T("Common.Change")
+                        <span>@T("Common.Change")</span>
+                        <span class="sr-only">&nbsp;@T("Order.ShippingAddress")</span>
                     </a>
                 </div>
             </div>
@@ -92,7 +95,8 @@
                 </div>
                 <div sm-if="Model.DisplayShippingMethodChangeOption" class="col col-auto">
                     <a asp-action="ShippingMethod" asp-controller="Checkout" class="btn btn-primary btn-sm change-checkout-data change-shipping-method">
-                        @T("Common.Change")
+                        <span>@T("Common.Change")</span>
+                        <span class="sr-only">&nbsp;@T("Order.ShippingMethod")</span>
                     </a>
                 </div>
             </div>
@@ -107,7 +111,8 @@
                 </div>
                 <div sm-if="Model.DisplayPaymentMethodChangeOption" class="col col-auto">
                     <a asp-action="PaymentMethod" asp-controller="Checkout" class="btn btn-primary btn-sm change-checkout-data change-payment-method">
-                        @T("Common.Change")
+                        <span>@T("Common.Change")</span>
+                        <span class="sr-only">&nbsp;@T("Order.PaymentMethod")</span>
                     </a>
                 </div>
             </div>
