--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Brand.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Brand.cshtml
@@ -13,8 +13,8 @@
         {
             if (_catalogSettings.LinkManufacturerLogoInLists)
             {
-                <a asp-route="Manufacturer" asp-route-SeName="@Model.Brand.SeName" title="@image.Title">
-                    <img sm-model="image" class="art-brand-picture" attr-alt='(image.Alt.IsEmpty(), Model.Brand.Name)' />
+                <a asp-route="Manufacturer" asp-route-SeName="@Model.Brand.SeName" aria-label="@image.Title">
+                    <img sm-model="image" class="art-brand-picture" />
                 </a>
             }
             else
