--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Variants.cshtml
@@ -10,13 +10,19 @@
 <div class="art-variant-info">
     @if (numColorAttributes > 0)
     {
-        <div class="art-color-opts" role="listbox" aria-orientation="horizontal" aria-label="@Model.ColorAttributes[0].AttributeName">
+        <nav aria-orientation="horizontal" aria-label="@Model.ColorAttributes[0].AttributeName">
+            <ul class="art-color-opts list-unstyled d-flex m-0 p-0">
             @foreach (var clr in Model.ColorAttributes)
             {
                 var title = T("Products.ChooseColorX", clr.FriendlyName, clr.AttributeName);
-                <a href="@clr.ProductUrl" class="art-color-opt" style="background-color: @clr.Color" role="option" aria-label="@title" title="@title"></a>
+                <li>
+                    <a href="@clr.ProductUrl" class="art-color-opt" style="background-color: @clr.Color" aria-label="@title" title="@title">
+                        <span class="sr-only">@clr.FriendlyName</span>
+                    </a>
+                </li>
             }
-        </div>
+            </ul>
+        </nav>
     }
     <div sm-if="Model.Attributes.Count > 0" class="art-more-opts">
         <span class="bidi-embed@(list.ViewMode == ProductSummaryViewMode.List ? "" : " d-block")">
