--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Pager.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Pager.cshtml
@@ -49,24 +49,30 @@
 
 @if (Model.AvailablePageSizes != null && Model.AvailablePageSizes.Count() > 1)
 {
-    var firstOption = Model.AvailablePageSizes.First();
     <div class="artlist-action--pagesize d-none d-sm-block">
         <div class="dropdown">
-            <button type="button" 
+            <button id="artlist-pagesize-button"
+                    type="button" 
                     class="btn btn-secondary dropdown-toggle d-inline-block fwn" 
                     data-toggle="dropdown" 
                     role="combobox" 
                     aria-haspopup="listbox" 
                     aria-expanded="false" 
-                    aria-controls="artlist-paginator" 
-                    aria-label="@T("Aria.Label.PaginatorItemsPerPage", firstOption)">
+                    aria-controls="artlist-pagesize-list"
+                    aria-activedescendant="artlist-pagesize-@pageable.PageSize">
+                <span class="sr-only">@T("Aria.Label.PaginatorItemsPerPage")</span>
                 @Html.Raw(T("Pager.XPerPage", $"<span class='fwm'>{pageable.PageSize}</span>"))
             </button>
-            <div id="artlist-paginator" class="dropdown-menu" role="listbox"> 
+            <div id="artlist-pagesize-list" class="dropdown-menu" role="listbox" aria-labelledby="artlist-pagesize-button">
                 @foreach (var size in Model.AvailablePageSizes)
                 {
-                    var isSelected = size == firstOption;
-                    <a href="@Display.ModifyQueryString(null, $"?s={size}", removeParamName: "i")" class="dropdown-item" role="option" attr-aria-selected='(isSelected, "true")'>@size</a>
+                    <a id="artlist-pagesize-@size"
+                       href="@Display.ModifyQueryString(null, $"?s={size}", removeParamName: "i")" 
+                       class="dropdown-item" 
+                       role="option"
+                       attr-aria-selected='(size == pageable.PageSize, "true")'>
+                       @size
+                    </a>
                 }
             </div>
         </div>
